Update Apache configure
Scripts update to support apache install in a clean ubuntu 14.04 OS

JIRA:BOTTLENECK-24

Change-Id: I7ae84723b6c6f0e36b76cd5165cbf548b40bce32
Signed-off-by: QiLiang <liangqi1@huawei.com>

--- a/rubbos/rubbos_scripts/1-1-1/apache_conf/httpd.conf
+++ b/rubbos/rubbos_scripts/1-1-1/apache_conf/httpd.conf
@@ -270,8 +270,8 @@ Listen 8000
 #  when the value of (unsigned)Group is above 60000; 
 #  don't use Group #-1 on these systems!
 #
-User nobody
-Group #-1
+User apache
+Group apache
 </IfModule>
 </IfModule>
 
