--- a/rubbos/rubbos_scripts/1-1-1/rubbos_conf/mysql.properties
+++ b/rubbos/rubbos_scripts/1-1-1/rubbos_conf/mysql.properties
@@ -8,11 +8,11 @@
 #
 datasource.name         mysql
 
-datasource.url          jdbc:mysql://node9:3313/rubbos
+datasource.url          jdbc:mysql://192.168.122.13:3313/rubbos
 datasource.classname    com.mysql.jdbc.Driver
   
-datasource.username     elba
-datasource.password     elba
+datasource.username     rubbos
+datasource.password     rubbos
 
 
 #####
