Update vm prepare setup
add nameserver, ssh-key configure and package install

JIRA: BOTTLENECK-33

Change-Id: I66dca9d2367f85bc353ce159689028be97a3b78d
Signed-off-by: QiLiang <liangqi1@huawei.com>

--- a/utils/infra_setup/vm_dev_setup/package.conf
+++ b/utils/infra_setup/vm_dev_setup/package.conf
@@ -9,3 +9,6 @@ export RUBBOS_RUN_DIR=${RUBBOS_RUN_DIR:-$BOTTLENECKS_REPO_DIR/rubbos/rubbos_scri
 export RUBBOS_EXE_DIR=${RUBBOS_EXE_DIR:-$BOTTLENECKS_REPO_DIR/rubbos/rubbos_scripts/1-1-1/scripts}
 export RUBBOS_APP_TOOLS_URL=${RUBBOS_APP_TOOLS_URL:-$PACKAGE_URL/rubbos/app_tools.tar.gz}
 export RUBBOS_MULINI6_URL=${RUBBOS_MULINI6_URL:-$PACKAGE_URL/rubbos/rubbosMulini6.tar.gz}
+
+export PreInstall_Packages="git gcc gettext g++ libaio1 libaio-dev make"
+
