Add dashboard configuration
JIRA: BOTTLENECK-30

Change-Id: Ic093abb9c8b70f5722737c0aa2066455d805e679
Signed-off-by: rexlee8776 <limingjiang@huawei.com>

--- a/utils/dashboard/dashboard.yaml
+++ b/utils/dashboard/dashboard.yaml
@@ -1,6 +1,6 @@
 ---
 
-pod_name: unknown-pod
-installer: fuel
-version: unknown
-target: http://127.0.0.1/results
+pod_name: REPLACE_POD_NAME
+installer: REPLACE_INSTALLER_TYPE
+version: REPLACE_VERSION
+target: target: http://REPLACE_BOTTLENECKS_DB_TARGET/results
