fetch_pod_env_parameter
JIRA: BOTTLENECK-30

Change-Id: Ic093abb9c8b70f5722737c0aa2066455d805e679
Signed-off-by: rexlee8776 <limingjiang@huawei.com>

--- a/utils/dashboard/dashboard.yaml
+++ b/utils/dashboard/dashboard.yaml
@@ -1,6 +1,6 @@
 ---
 
-pod_name: unknown-pod
-installer: fuel
+pod_name: UNKNOWN_POD_NAME
+installer: UNKNOWN_INSTALLER_TYPE
 version: unknown
 target: http://127.0.0.1/results
