--- a/utils/dashboard/dashboard.yaml
+++ b/utils/dashboard/dashboard.yaml
@@ -1,6 +1,6 @@
 ---
 
-pod_name: REPLACE_POD_NAME
+pod_name: REPLACE_NODE_NAME
 installer: REPLACE_INSTALLER_TYPE
 version: REPLACE_VERSION
 target: http://REPLACE_BOTTLENECKS_DB_TARGET/results
