rubbos docker ci running improvement
JIRA: BOTTLENECK-48

Change-Id: Ic27b7b203b58cfc2cee6bda20391edb8966566b2
Signed-off-by: MatthewLi <matthew.lijun@huawei.com>

--- a/ci/docker/Dockerfile
+++ b/ci/docker/Dockerfile
@@ -13,7 +13,7 @@ MAINTAINER Qi Liang <liangqi1@huawei.com>
 LABEL image=opnfv/bottlenecks
 
 # GIT repo directory
-ENV REPOS_DIR /home/opnfv/repos
+ENV REPOS_DIR /home/opnfv
 
 # Bottlenecks repo
 ENV BOTTLENECKS_REPO_DIR ${REPOS_DIR}/bottlenecks
