add MAINTAINER for Dockerfile
JIRA: BOTTLENECK-48

please refer to the comments in https://gerrit.opnfv.org/gerrit/#/c/12227/

Change-Id: Id591ec23894cc2be281a48057a4ad2a0371494a0
Signed-off-by: MatthewLi <matthew.lijun@huawei.com>

--- a/ci/docker/Dockerfile
+++ b/ci/docker/Dockerfile
@@ -8,6 +8,7 @@
 ##############################################################################
 
 FROM ubuntu:14.04
+MAINTAINER MatthewLi <matthew.lijun@huawei.com>
 
 LABEL image=opnfv/bottlenecks
 
