bugfix: docker ci workflow bugfix
Change-Id: I1215c6ecc9642bb2e4d433276fc3f6941e775e0b
Signed-off-by: MatthewLi <matthew.lijun@huawei.com>

--- a/ci/docker/Dockerfile
+++ b/ci/docker/Dockerfile
@@ -38,7 +38,7 @@ RUN apt-get -y autoremove && \
 RUN mkdir -p ${REPOS_DIR}
 
 RUN git config --global http.sslVerify false
-# TODO fix code clone handler
-#RUN git clone https://gerrit.opnfv.org/gerrit/bottlenecks ${BOTTLENECKS_REPO_DIR}
-#RUN git clone https://gerrit.opnfv.org/gerrit/releng ${RELENG_REPO_DIR}
+RUN git clone https://gerrit.opnfv.org/gerrit/bottlenecks ${BOTTLENECKS_REPO_DIR}
+RUN git clone https://gerrit.opnfv.org/gerrit/releng ${RELENG_REPO_DIR}
 
+COPY ../../run_tests.sh /usr/local/bin/
