fix hostname of rubbos control instance
JIRA: BOTTLENECK-75

Change-Id: Ic84c4a231dfbc6ae3f28393d52b273fa6d533c7b
Signed-off-by: wangyaoguang <sunshine.wang@huawei.com>

--- a/testsuites/rubbos/testcase_cfg/rubbos_1-1-0-1.yaml
+++ b/testsuites/rubbos/testcase_cfg/rubbos_1-1-0-1.yaml
@@ -84,7 +84,7 @@ resources:
   rubbos_control:
     type: OS::Nova::Server
     properties:
-      name: rubbos_control
+      name: rubbos-control
       image: { get_param: image }
       flavor: { get_param: flavor }
       key_name: { get_param: key_name }
