config info for different testcase in vstf
JIRA: BOTTLENECK-70

Change-Id: I21cf538b7984cbc5036fc6fe897d0c90eec19e55
Signed-off-by: MatthewLi <matthew.lijun@huawei.com>

--- a/testsuites/vstf/testcase_cfg/vstf_Ti2.yaml
+++ b/testsuites/vstf/testcase_cfg/vstf_Ti2.yaml
@@ -1,7 +1,7 @@
-tool: netperf
+tool: pktgen
 protocol: udp
 type: frameloss
 sizes: 64, 128, 512, 1024
-senders: 0, -1
-receivers: -1, 0
-flows: 2
+senders: -1
+receivers: 0
+flows: 1
