bugfix for image cleanup and python script calling by subprocess shell
JIRA: BOTTLENECK-70

log is shown in https://build.opnfv.org/ci/view/bottlenecks/job/bottlenecks-compass-vstf-virtual-daily-master/9/console
and https://build.opnfv.org/ci/view/bottlenecks/job/bottlenecks-compass-vstf-virtual-daily-master/10/console
for image names, we use bottlenecks_<suite name>_<option>
for vstf_collector.py, it is used for transfer test result to community dashboard, it works for B release, for C release,
we should adapt it later, now we only fix its path error.

Change-Id: Iad2bf39837d02aa1e5ea8a323411d98082135882
Signed-off-by: MatthewLi <matthew.lijun@huawei.com>

--- a/testsuites/vstf/testcase_cfg/vstf_heat_template.yaml
+++ b/testsuites/vstf/testcase_cfg/vstf_heat_template.yaml
@@ -19,15 +19,15 @@ parameters:
   image_vstf_manager:
     type: string
     description: Name of image to use for servers
-    default: vstf-manager
+    default: bottlenecks_vstf_manager
   image_vstf_tester:
     type: string
     description: Name of image to use for servers
-    default: vstf-tester
+    default: bottlenecks_vstf_tester
   image_vstf_target:
     type: string
     description: Name of image to use for servers
-    default: vstf-target
+    default: bottlenecks_vstf_target
   #nova flavor-list to query available flavors
   flavor:
     type: string
