Add new CI docker build support
JIRA: BOTTLENECK-108

Releng has updated the parameter input method. So the Docker file
need BRANCH argument to specify the docker image source.

Change-Id: I6c8eee3aaf7729964f0b810c209ccdcf9b75a233
Signed-off-by: yuyang <Gabriel.yuyang@huawei.com>

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -15,6 +15,9 @@ LABEL image=opnfv/bottlenecks
 # GIT repo directory
 ENV REPOS_DIR /home/opnfv
 
+# CI docker image label
+ARG BRANCH=master
+
 # Bottlenecks repo
 ENV BOTTLENECKS_REPO_DIR ${REPOS_DIR}/bottlenecks
 ENV RELENG_REPO_DIR ${REPOS_DIR}/releng
