--- a/testsuites/posca/testcase_cfg/posca_factor_system_bandwidth.yaml
+++ b/testsuites/posca/testcase_cfg/posca_factor_system_bandwidth.yaml
@@ -1,11 +1,11 @@
 [config]
-test_ip: 192.168.23.2:8888
+test_ip:
+dashboard: y
+ES_ip:
 tool: netperf
 protocol: tcp
-test_time: 30
-tx pkt sizes: 8, 16, 32, 64, 128, 256, 512, 1024
-rx pkt sizes: 8, 16, 32, 64, 128, 256, 512, 1024
-tx cache sizes: 2304, 4608, 9216, 18432, 32768, 65536
-rx cache sizes: 1152, 2304, 4608, 9216, 18432, 32768, 65536, 131072
-cpu load: 0.9
+test_time: 60
+tx_pkt_sizes: 8, 16, 32, 64, 128, 256, 512, 1024, 2048, 4096, 8192, 16384, 32768, 65536, 131072
+rx_pkt_sizes: 8, 16, 32, 64, 128, 256, 512, 1024, 2048, 4096, 8192, 16384, 32768, 65536, 131072
+cpu_load: 0.9
 latency: 100000
