--- a/docker/bottleneck-compose/docker-compose.yml
+++ b/docker/bottleneck-compose/docker-compose.yml
@@ -18,7 +18,7 @@ yardstick:
   restart: always
   build: yardstick/
   volumes:
-    - /var/run/docker/sock:/var/run/docker/sock
+    - /var/run/docker.sock:/var/run/docker.sock
   ports:
     - "8888:5000"
 
