--- a/docker/bottleneck-compose/docker-compose.yml
+++ b/docker/bottleneck-compose/docker-compose.yml
@@ -16,7 +16,7 @@ kibana:
 
 yardstick:
   restart: always
-  build: yardstick/
+  image: opnfv/yardstick:latest
   volumes:
     - /var/run/docker.sock:/var/run/docker.sock
   ports:
