bugfix:fix the version support problem of setuptools
JIRA: BOTTLENECK-108

Due the version problem, docker build job fails each time.

Change-Id: I179ec56295f344fbd14ffeb8650c8d4625507379
Signed-off-by: yuyang <Gabriel.yuyang@huawei.com>

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -37,7 +37,7 @@ RUN apt-get update && apt-get install -y \
     python-dev \
     python-pip \
     python-setuptools && \
-    easy_install -U setuptools
+    easy_install -U setuptools==30.0.0
 
 RUN apt-get -y autoremove && \
     apt-get clean
