bugfix:enabling the repo branch choosing
JIRA: BOTTLENECK-108

Enabling the git repo branch choosing in dockerfile for Bottlenecks.

Change-Id: Id03c39e59cb1b38d198ec37f613c9660bcf335cd
Signed-off-by: yuyang <Gabriel.yuyang@huawei.com>

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -45,7 +45,7 @@ RUN apt-get -y autoremove && \
 RUN mkdir -p ${REPOS_DIR}
 
 RUN git config --global http.sslVerify false
-RUN git clone https://gerrit.opnfv.org/gerrit/bottlenecks ${BOTTLENECKS_REPO_DIR}
+RUN git -b $BRANCH clone https://gerrit.opnfv.org/gerrit/bottlenecks ${BOTTLENECKS_REPO_DIR}
 RUN git clone https://gerrit.opnfv.org/gerrit/releng ${RELENG_REPO_DIR}
 
 RUN easy_install pytz
