Bottlenecks stack environment prepare
JIRA: BOTTLENECK-124

This code is for Bottlenecks to have a common way to prepare stack
environment.
those action are divided into three part: fetch os file, source file
and adding ext-net to source file.
those function also need change other file like fetch_os_creds.sh.
And add some config to config file.
remove parser file logging function.

This code is relying on the patch:
Modify utils/ code into PEP8 style

Change-Id: I54405776b6dc3f5fb939e511c96963a9c1624938
Signed-off-by: liyin <liyin11@huawei.com>

--- a/config/config.yaml
+++ b/config/config.yaml
@@ -1,2 +1,5 @@
 common_config:
-  log_dir: '/tmp/bottlenecks_POSCA.log'
+  log_dir: '/tmp/'
+  rc_dir: '/tmp/admin_rc.sh'
+  releng_dir: '/home/opnfv/releng'
+  fetch_os_file: 'utils/fetch_os_creds.sh'
