--- a/testsuites/posca/testcase_cfg/posca_factor_system_bandwidth.yaml
+++ b/testsuites/posca/testcase_cfg/posca_factor_system_bandwidth.yaml
@@ -1,11 +1,15 @@
-[config]
-test_ip:
-dashboard: y
-ES_ip:
-tool: netperf
-protocol: tcp
-test_time: 60
-tx_pkt_sizes: 8, 16, 32, 64, 128, 256, 512, 1024, 2048, 4096, 8192, 16384, 32768, 65536, 131072
-rx_pkt_sizes: 8, 16, 32, 64, 128, 256, 512, 1024, 2048, 4096, 8192, 16384, 32768, 65536, 131072
-cpu_load: 0.9
-latency: 100000
+test_config:
+  tool: netperf
+  protocol: tcp
+  test_time: 60
+  tx_pkt_sizes: 8, 16, 32, 64, 128, 256, 512, 1024, 2048, 4096, 8192, 16384, 32768, 65536, 131072
+  rx_pkt_sizes: 8, 16, 32, 64, 128, 256, 512, 1024, 2048, 4096, 8192, 16384, 32768, 65536, 131072
+  cpu_load: 0.9
+  latency: 100000
+runner_config:
+  dashboard: y
+  dashboard_ip:
+  stack_create: yardstick
+  yardstick_test_ip:
+  yardstick_test_dir: "samples"
+  yardstick_testcase: "netperf_bottlenecks"
