--- a/testsuites/posca/testcase_cfg/posca_factor_system_bandwidth.yaml
+++ b/testsuites/posca/testcase_cfg/posca_factor_system_bandwidth.yaml
@@ -1,9 +1,9 @@
 test_config:
   tool: netperf
   protocol: tcp
-  test_time: 60
-  tx_pkt_sizes: 8, 16, 32, 64, 128, 256, 512, 1024, 2048, 4096, 8192, 16384, 32768, 65536, 131072
-  rx_pkt_sizes: 8, 16, 32, 64, 128, 256, 512, 1024, 2048, 4096, 8192, 16384, 32768, 65536, 131072
+  test_time: 20
+  tx_pkt_sizes: 64, 128, 256, 512, 1024, 2048, 4096, 8192, 16384, 32768, 65536
+  rx_pkt_sizes: 64, 128, 256, 512, 1024, 2048, 4096, 8192, 16384, 32768, 65536
   cpu_load: 0.9
   latency: 100000
 runner_config:
