Dashboard and output file code reconstruction
JIRA:BOTTLENECK-134

Those code will change the way to create dashboard.
And dashboard as a spare function to show data.
And we add log system to dashboard creation.
The output file is created anyway.

Change-Id: Ia3c4d5a8ada27005702e3eed08757f61610da22f
Signed-off-by: liyin <liyin11@huawei.com>

--- a/testsuites/posca/testcase_cfg/posca_factor_system_bandwidth.yaml
+++ b/testsuites/posca/testcase_cfg/posca_factor_system_bandwidth.yaml
@@ -7,7 +7,7 @@ test_config:
   cpu_load: 0.9
   latency: 100000
 runner_config:
-  dashboard: y
+  dashboard: "y"
   dashboard_ip:
   stack_create: yardstick
   yardstick_test_ip:
