stress test of ping testcase
JIRA:BOTTLENECK-136

those code will add a new testcase: posca_stress_ping
This will use docker python client to realize the fountion of
calling yardstick to test.
And yardstick will create several VM pairs to test.
Because of the limites of quotas,
we now create 2,5,10 VM pairs.

Change-Id: I096250c547cd598c7c632a884b31d81c2be125f8
Signed-off-by: liyin <liyin11@huawei.com>

--- a/docker/bottleneck-compose/docker-compose.yml
+++ b/docker/bottleneck-compose/docker-compose.yml
@@ -19,9 +19,20 @@ yardstick:
   image: opnfv/yardstick:latest
   volumes:
     - /var/run/docker.sock:/var/run/docker.sock
+    - /tmp/:/tmp/
   ports:
     - "8888:5000"
+  privileged: true
+  environment:
+    - INSTALLER_IP=192.168.200.2
+    - INSTALLER_TYPE=compass
 
 bottlenecks:
   restart: always
   build: bottlenecks/
+  volumes:
+    - /var/run/docker.sock:/var/run/docker.sock
+    - /tmp/:/tmp/
+  environment:
+    - INSTALLER_IP=192.168.200.2
+    - INSTALLER_TYPE=compass
