--- a/testsuites/rubbos/puppet_manifests/modules/rubbos_tomcat/files/tomcat_sl/build.xml
+++ b/testsuites/rubbos/puppet_manifests/modules/rubbos_tomcat/files/tomcat_sl/build.xml
@@ -1,3 +1,10 @@
+<!--
+ Copyright (c) 2016 HUAWEI TECHNOLOGIES CO.,LTD and others.
+ All rights reserved. This program and the accompanying materials
+ are made available under the terms of the Apache License, Version 2.0
+ which accompanies this distribution, and is available at
+ http://www.apache.org/licenses/LICENSE-2.0
+-->
 <project name="RUBBoS Servlets" default="dist" basedir=".">
   <property file="../build.properties" />
   <property name="servlets.html" value="../Servlet_HTML" />
@@ -6,14 +13,14 @@
     <tstamp/>
     <mkdir dir="${classes.dir}"/>
   </target>
-  
+
   <path id="base.classpath">
     <pathelement location="${classes.dir}" />
     <fileset dir="${j2ee}/lib">
       <include name="j2ee.jar"/>
     </fileset>
   </path>
-  
+
   <target name="compile" depends="init">
     <javac srcdir="${src}"
            includes="edu/rice/rubbos/servlets/*"
