--- a/testsuites/vstf/testcase_cfg/vstf_Tn2.yaml
+++ b/testsuites/vstf/testcase_cfg/vstf_Tn2.yaml
@@ -1,7 +1,16 @@
+##############################################################################
+# Copyright (c) 2016 HUAWEI TECHNOLOGIES CO.,LTD and others.
+#
+# All rights reserved. This program and the accompanying materials
+# are made available under the terms of the Apache License, Version 2.0
+# which accompanies this distribution, and is available at
+# http://www.apache.org/licenses/LICENSE-2.0
+##############################################################################
+
 tool: pktgen
 protocol: udp
 type: frameloss
 sizes: 64, 128, 512, 1024
 senders: 0, -1
 receivers: -1, 0
-flows: 2 
+flows: 2
